syntax="proto3";

import "model/model.proto";

package server;

option go_package = "github.com/TheLazarusNetwork/erebrus/server;server";

message Empty{

}

message Config{
    bytes Config=1;
    int64 status=2;
    bool success=3;
    string error=4;
}

service ServerService{
    rpc GetServerInformation(Empty) returns (model.Response);
    rpc GetServerConfiguraion(Empty) returns(Config);
    rpc UpdateServer(model.Server) returns (model.Response);
}